# ARK

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  ARCHITECTURE_ar.md  ARCHITECTURE_zh.md  LICENSE  README.md  README_ar.md  README_zh.md  TODO.md  TODO_ar.md  TODO_zh.md  environment-macos.yml  environment.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
ark/: __init__.py  access.py  agents.py  citation.py  cli.py  compiler.py  compute.py  deep_research.py  development.py  ethical_review.py  execution.py  figure_manifest.py  figure_overlap.py  findings_schema.py  latex_geometry.py  memory.py  nano_banana.py  orchestrator.py  paths.py  pipeline.py  quality.py  share.py  summary.py  telegram.py  telegram_ai.py  telegram_daemon.py  template_preprocess.py  ui.py
ark/compute/: __init__.py  base.py  custom.py  local.py  slurm.py
ark/compute/cloud/: __init__.py  aws.py  azure.py  base.py  gcp.py  orchestrator.py
ark/config/: defaults.py
ark/dashboard/: __init__.py  app.py  auth.py  config.py  crypto.py  data.py  jobs.py  models.py  notify.py  routes.py  slurm_template.sh  watcher.py
ark/dashboard/static/: app.html  dashboard.html
ark/dashboard/templates/: app.html
ark/dashboard/utils/: verify.py
ark/engines/: __init__.py  cli.py
ark/hitl/: __init__.py  utils.py
ark/latex/: __init__.py  compiler.py  utils.py
ark/orchestrator/: __init__.py  __main__.py  core.py  state.py  workspace.py
ark/telegram/: __init__.py  client.py  daemon.py
ark/templates/: hooks.py
ark/templates/agents/: coder.prompt  experimenter.prompt  initializer.prompt  meta_debugger.prompt  planner.prompt  researcher.prompt  reviewer.prompt  visualizer.prompt  writer.prompt
ark/templates/style_guides/: academic_diagram_style.md  academic_plot_style.md
ark/webapp/: __init__.py  app.py  config.py  crypto.py  db.py  jobs.py  notify.py  routes.py  slurm_template.sh  templates.py
ark/webapp/static/: app.html
ark/webapp/utils/: verify.py
docker/: Dockerfile.job  Dockerfile.webapp  docker-compose.yml  entrypoint-job.sh  entrypoint-webapp.sh  job-entrypoint.sh  push-gcp.sh
docker/k8s/: README-eks.md  ark-jobs-namespace.yaml  ark-limitrange.yaml  ark-rbac.yaml
docs/: about.html  doc.html  index.html
docs/ar/: about.html  doc.html  index.html
docs/css/: style.css
docs/zh/: about.html  doc.html  index.html
materials/related_work/: ai-scientist-v2_notes.md  jr-ai-scientist_notes.md
scripts/: ark_vm_reaper.sh  build_ark_gcp_image.sh  setup_ark_host.sh
skills/: index.json
skills/builtin/env-isolation/: SKILL.md
skills/builtin/figure-integrity/: SKILL.md
skills/builtin/human-intervention/: SKILL.md
skills/builtin/page-adjustment/: SKILL.md
tests/: _preview_telegram.py  conftest.py  test_citation.py  test_config.py  test_dev.py  test_figure_code_routing.py  test_gcp_integration_real.py  test_hitl.py  test_integration.py  test_iteration_cap.py  test_memory.py  test_orchestrator.py  test_pipeline_sync.py  test_restart_preserves_custom_template.py  test_security.py  test_telegram_framework.py  test_template_preprocess.py  test_template_preprocess_e2e.py
tests/integration/: test_citation_network.py  test_compute_gcp.py  test_gcp_real.py
tests/unit/: test_appendix_after_refs.py  test_citation.py  test_compute.py  test_deep_research_assemble.py  test_doctor.py  test_ethical_review.py  test_findings_yaml_repair.py  test_float_barrier.py  test_hitl.py  test_install_script.py  test_iteration_cap.py  test_llm_statement.py  test_orchestrator.py  test_page_count_columns.py  test_paper_pipeline_mocked.py  test_prune_citations.py  test_prune_undefined_citations.py  test_quality.py  test_security.py  test_telegram_mocked.py  test_template_bib_merge.py  test_template_preprocess_e2e.py
venue_templates/: .gitignore
venue_templates/acl/: cfp.md
venue_templates/cvpr/: cfp.md  main.tex
venue_templates/emnlp/: cfp.md  main.tex
venue_templates/euromlsys/: cfp.md  main.tex  references.bib
venue_templates/iclr/: cfp.md  main.tex
venue_templates/icml/: cfp.md  main.tex
venue_templates/infocom/: cfp.md  main.tex
venue_templates/mlsys/: cfp.md  main.tex
venue_templates/neurips/: cfp.md  main.tex
venue_templates/osdi/: cfp.md  main.tex
venue_templates/sosp/: cfp.md  main.tex
website/dashboard/: __init__.py  app.py  auth.py  config.py  constants.py  crypto.py  db.py  jobs.py  notify.py  request_access.py  routes.py  slurm_template.sh
website/homepage/: about.html  architecture.md  doc.html  index.html  install.sh  request-access.html
(+10 files in other folders)
