[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-research"
version = "0.1.1"
description = "ARK - Automatic Research Kit: AI-powered idea-to-paper automation"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0", "PyMuPDF>=1.24.0", "Pillow>=10.0.0"]

[project.optional-dependencies]
research = ["google-genai>=1.55.0"]
webapp = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "authlib>=1.3",
    "httpx>=0.25",
    "python-multipart>=0.0.6",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "itsdangerous>=2.1",
]


[project.scripts]
ark = "ark.cli:main"

[tool.pytest.ini_options]
markers = ["network: tests that hit real APIs (deselect with '-m not network')"]

[tool.setuptools.packages.find]
include = ["ark*"]

[tool.setuptools.package-data]
ark = ["templates/**/*", "webapp/static/**/*", "webapp/slurm_template.sh"]
