[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-research"
version = "0.3.0"
description = "ARK - Automatic Research Kit: AI-powered idea-to-paper automation"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0", "PyMuPDF>=1.24.0", "Pillow>=10.0.0"]

[project.optional-dependencies]
# `anthropic` is required by submodules/PaperBanana (top-level import in
# generation_utils.py); without it the entire PaperBanana figure pipeline
# fails to import and we silently fall back to the simpler Nano Banana path.
research = ["google-genai>=1.55.0", "anthropic>=0.40.0"]
webapp = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "authlib>=1.3",
    "httpx>=0.25",
    "python-multipart>=0.0.6",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "itsdangerous>=2.1",
    "cryptography>=41.0",
    "markdown>=3.5",
    "weasyprint>=60.0",
]


[project.scripts]
ark = "ark.cli:main"

[tool.pytest.ini_options]
markers = [
    "network: tests that hit real APIs (deselect with '-m not network')",
    "gcp: tests that provision real Google Cloud resources (deselect with '-m not gcp')",
    "unit: fast offline/logic tests",
    "integration: slow tests requiring external services or full pipeline mocks",
]

[tool.setuptools.packages.find]
include = ["ark*", "website*"]

[tool.setuptools.package-data]
ark = ["templates/**/*"]
website = ["dashboard/static/**/*", "dashboard/templates/**/*", "dashboard/slurm_template.sh"]
