[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-research"
version = "0.3.0"
description = "ARK - Automatic Research Kit: AI-powered idea-to-paper automation"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0", "PyMuPDF>=1.24.0", "Pillow>=10.0.0"]

[project.optional-dependencies]
# Deep Research uses google-genai. PaperBanana (submodules/PaperBanana) is
# imported inline by ark/latex/compiler.py — `from agents.planner_agent
# import PlannerAgent` walks straight into the submodule, so all of
# PaperBanana's runtime imports must resolve in the same Python that runs
# the orchestrator. A missing dep here = silent fallback to Nano Banana
# on every paper run (real bug we shipped: ark-prod was missing aiofiles
# the whole time, so prod papers never used the 5-agent figure pipeline).
# Skip the demo-UI deps (gradio, streamlit) — runtime doesn't import them.
research = [
    "google-genai>=1.55.0",
    "anthropic>=0.40.0",
    "aiofiles>=23.0",
    "json_repair>=0.30",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "tqdm>=4.65",
    "google-auth>=2.0",
    "huggingface_hub>=0.20",
    "openai>=1.0",
]
webapp = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "authlib>=1.3",
    "httpx>=0.25",
    "python-multipart>=0.0.6",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "itsdangerous>=2.1",
    "cryptography>=41.0",
    "markdown>=3.5",
    "weasyprint>=60.0",
]


[project.scripts]
ark = "ark.cli:main"

[tool.pytest.ini_options]
markers = [
    "network: tests that hit real APIs (deselect with '-m not network')",
    "gcp: tests that provision real Google Cloud resources (deselect with '-m not gcp')",
    "unit: fast offline/logic tests",
    "integration: slow tests requiring external services or full pipeline mocks",
]

[tool.setuptools.packages.find]
include = ["ark*", "website*"]

[tool.setuptools.package-data]
ark = ["templates/**/*"]
website = ["dashboard/static/**/*", "dashboard/templates/**/*", "dashboard/slurm_template.sh"]
